--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -45,12 +45,11 @@
         </div>
 
         <div class="form-group">
-          <!-- [(ngModel)]="selectedRole" -->
-          <select class="form-control access-right">
+          <select class="form-control access-right" [(ngModel)]="selectedRole">
             <option selected disabled>Quyền đăng nhập</option>
-            <!-- <option *ngFor="let role of roles" [ngValue]="role">
+            <option *ngFor="let role of roles" [ngValue]="role">
               {{ role.name }}
-            </option> -->
+            </option> 
           </select>
         </div>
 
