--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,141 +20,60 @@
     </select>
   </div>
   <div class="row">
-    <div class="col-lg-4 col-md-6">
-      <div class="product-item">
-        <img
-          src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-          alt="Product Image"
-          class="product-image"
-        />
-        <h3 class="product-name">Product 1</h3>
-        <p class="product-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-        <p class="product-warranty">Bảo hành: 12 tháng</p>
-        <p class="product-price">Giá: <del>$200</del> $100</p>
-        <div class="product-rating">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
-        </div>
-        <div class="product-actions">
-          <button class="btn btn-primary">Thêm vào giỏ hàng</button>
-          <span class="space-x"></span>
-          <button class="btn btn-success">Mua ngay</button>
+      <div class="col-lg-4 col-md-6" *ngFor="let product of products">
+        <!-- (click)="onProductClick(product.id)" -->
+        <div class="product-item">
+          <img [src]="product.url" alt="Product Image" class="product-image" />
+          <h3 class="product-name">{{ product.name }}</h3>
+          <p class="product-description">{{ product.description }}</p>
+          <p class="product-warranty">Bảo hành: 12 tháng</p>
+          <p class="product-price">Giá: ${{ product.price }}</p>
+          <div class="product-rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <div class="product-actions">
+            <button class="btn btn-primary">Thêm vào giỏ hàng</button>
+            <span class="space-x"></span>
+            <button class="btn btn-success">Mua ngay</button>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <div class="product-item">
-        <img
-          src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-          alt="Product Image"
-          class="product-image"
-        />
-        <h3 class="product-name">Product 1</h3>
-        <p class="product-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-        <p class="product-warranty">Bảo hành: 12 tháng</p>
-        <p class="product-price">Giá: <del>$200</del> $100</p>
-        <div class="product-rating">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
-        </div>
-        <div class="product-actions">
-          <button class="btn btn-primary">Thêm vào giỏ hàng</button>
-          <span class="space-x"></span>
-          <button class="btn btn-success">Mua ngay</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <div class="product-item">
-        <img
-          src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-          alt="Product Image"
-          class="product-image"
-        />
-        <h3 class="product-name">Product 1</h3>
-        <p class="product-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-        <p class="product-warranty">Bảo hành: 12 tháng</p>
-        <p class="product-price">Giá: <del>$200</del> $100</p>
-        <div class="product-rating">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
-        </div>
-        <div class="product-actions">
-          <button class="btn btn-primary">Thêm vào giỏ hàng</button>
-          <span class="space-x"></span>
-          <button class="btn btn-success">Mua ngay</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <div class="product-item">
-        <img
-          src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-          alt="Product Image"
-          class="product-image"
-        />
-        <h3 class="product-name">Product 1</h3>
-        <p class="product-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-        <p class="product-warranty">Bảo hành: 12 tháng</p>
-        <p class="product-price">Giá: <del>$200</del> $100</p>
-        <div class="product-rating">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
-        </div>
-        <div class="product-actions">
-          <button class="btn btn-primary">Thêm vào giỏ hàng</button>
-          <span class="space-x"></span>
-          <button class="btn btn-success">Mua ngay</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <div class="product-item">
-        <img
-          src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-          alt="Product Image"
-          class="product-image"
-        />
-        <h3 class="product-name">Product 1</h3>
-        <p class="product-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-        <p class="product-warranty">Bảo hành: 12 tháng</p>
-        <p class="product-price">Giá: <del>$200</del> $100</p>
-        <div class="product-rating">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
-        </div>
-        <div class="product-actions">
-          <button class="btn btn-primary">Thêm vào giỏ hàng</button>
-          <span class="space-x"></span>
-          <button class="btn btn-success">Mua ngay</button>
-        </div>
-      </div>
-    </div>
   </div>
+</div>
+
+<div class="d-flex justify-content-center">
+  <nav aria-label="Page navigation">
+    <ul class="pagination">
+      <li class="page-item" *ngIf="currentPage > 1">
+        <a class="page-link" href="#" (click)="onPageChange(1)">First</a>
+      </li>
+      <li class="page-item" *ngIf="currentPage > 1">
+        <a class="page-link" href="#" (click)="onPageChange(currentPage - 1)"
+          >Previous</a
+        >
+      </li>
+      <ng-container *ngFor="let page of visiblePages">
+        <li class="page-item" [ngClass]="{ active: page === currentPage }">
+          <a class="page-link" href="#" (click)="onPageChange(page)">{{
+            page
+          }}</a>
+        </li>
+      </ng-container>
+      <li class="page-item" *ngIf="currentPage < totalPages">
+        <a class="page-link" href="#" (click)="onPageChange(currentPage + 1)"
+          >Next</a
+        >
+      </li>
+      <li class="page-item" *ngIf="currentPage < totalPages">
+        <a class="page-link" href="#" (click)="onPageChange(totalPages)"
+          >Last</a
+        >
+      </li>
+    </ul>
+  </nav>
 </div>
 <app-footer></app-footer>
