--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -69,18 +69,16 @@
         <p>{{ product?.description }}</p>
         <p>Giá: ${{ product?.price }}</p>
         <div class="product-actions">
-          <!-- (click)="addToCart()" -->
-          <button class="btn btn-primary">Thêm vào giỏ hàng</button>
-          <!-- (click)="buyNow()" -->
-          <button class="btn btn-success">Mua ngay</button>
+          <button class="btn btn-primary" (click)="addToCart()">
+            Thêm vào giỏ hàng
+          </button>
+          <button class="btn btn-success" (click)="buyNow()">Mua ngay</button>
         </div>
         <div class="product-quantity">
           <div class="border-wrapper">
-            <!-- (click)="decreaseQuantity()" -->
-            <button>-</button>
+            <button (click)="decreaseQuantity()">-</button>
             <input type="text" [value]="quantity" />
-            <!-- (click)="increaseQuantity()" -->
-            <button>+</button>
+            <button (click)="increaseQuantity()">+</button>
           </div>
         </div>
       </div>
